[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/title_screen.tres" type="Theme" id=1]
[ext_resource path="res://components/title_buttons/title_buttons.gd" type="Script" id=2]
[ext_resource path="res://components/title_button/title_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://SE/button_start.wav" type="AudioStream" id=4]

[node name="Menu Buttons" type="VBoxContainer"]
margin_left = 2.72076
margin_right = 84.7208
margin_bottom = 200.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="new_game" parent="." instance=ExtResource( 3 )]
margin_right = 218.0
margin_bottom = 70.0
focus_neighbour_top = NodePath("../exit")
focus_mode = 2
enabled_focus_mode = 2
text = "New Game"
button_pressed = ExtResource( 4 )

[node name="load_game" parent="." instance=ExtResource( 3 )]
margin_top = 74.0
margin_right = 218.0
margin_bottom = 144.0
focus_mode = 2
enabled_focus_mode = 2
text = "Load game"

[node name="options" parent="." instance=ExtResource( 3 )]
margin_top = 148.0
margin_right = 218.0
margin_bottom = 218.0
focus_mode = 2
enabled_focus_mode = 2
text = "Options"

[node name="exit" parent="." instance=ExtResource( 3 )]
margin_top = 222.0
margin_right = 218.0
margin_bottom = 292.0
focus_neighbour_bottom = NodePath("../new_game")
focus_mode = 2
enabled_focus_mode = 2
text = "Exit"
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
